<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.example.lenovo.soccerinfo.PersonActivity">

    <Button
        android:id="@+id/confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@color/bluegray"
        android:onClick="save"
        android:text="@string/btn_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/leftLinear"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emptyText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="" />

            <TextView
                android:id="@+id/personName"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="end"
                android:text="@string/person_name"
                android:textColor="@color/lightblue"
                android:textSize="25dp" />

            <TextView
                android:id="@+id/emptyText3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="" />

            <TextView
                android:id="@+id/personTimes"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="end"
                android:text="@string/person_times"
                android:textColor="@color/lightblue"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/rightLinear"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/emptyText2"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="" />

            <EditText
                android:id="@+id/nameEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:hint="@string/person_edit_name"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/emptyText4"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:text="" />

            <TextView
                android:id="@+id/personTimesShow"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="end"
                android:text=""
                android:textColor="@color/black"
                android:textSize="18dp" />
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
